--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<html>
-  <head>
-    
-  </head>
-  <body>
-    <h1> dm cu tui</h1>
-      </body>
-  
-      
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Làng Đá đây</title>
+    <script src = "dm.js"></script>
+</head>
+<body>
+    <img  onclick="checkthisSound()" id = kim src = "srcpic/kim.png">
+    <audio id = "audio" autoplay></audio>
+    <button onclick="checkthisSound()"> nhấn đây hoặc nhấn vào mặt con Kim </button> 
+</body>
 </html>
